fix preview pic position / add year to projects in list on mobile

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -17,6 +17,7 @@
 .projects .preview .pic {
 	aspect-ratio: 16 / 10;
 	background-size: cover;
+	background-position: center;
 	background-repeat: no-repeat;
 	margin: 2px;
 	border: 1px solid var(--coldark);
